@@ -210,6 +210,8 @@ require_once __DIR__ . '/main.php';
 \define('_AM_WGEVENTS_MAINTENANCE_INVALID_QUE_DESC', 'Überprüfung der Tabelle Fragen und Suche nach Einträgen ohne Verweis auf eine gültige Veranstaltung');
 \define('_AM_WGEVENTS_MAINTENANCE_INVALID_ANSWERS', 'Überprüfung Tabelle Antworten');
 \define('_AM_WGEVENTS_MAINTENANCE_INVALID_ANSWERS_DESC', 'Überprüfung der Tabelle Antworten und Suche nach Einträgen ohne Verweis auf eine gültige Frage');
+\define('_AM_WGEVENTS_MAINTENANCE_INVALID_REG', 'Überprüfung Tabelle Anmeldungen');
+\define('_AM_WGEVENTS_MAINTENANCE_INVALID_REG_DESC', 'Überprüfung der Tabelle Anmeldungen und Suche nach Einträgen ohne Verweis auf eine gültige Veranstaltung');
 \define('_AM_WGEVENTS_MAINTENANCE_CHECKTABLE_SUCCESS', 'Überprüfung der Tabelle erfolgreich beendet');
 \define('_AM_WGEVENTS_MAINTENANCE_ANON_DATA', 'Anonymisieren alte Registrierungsdaten');
 \define('_AM_WGEVENTS_MAINTENANCE_ANON_DATA_DESC', 'Zur Wahrung der Vorgaben der Datenschutzbestimmungen sind Daten zu Veranstaltungen, die nicht mehr benötigt werden, auch wieder zu löschen.<br>
