@@ -5,6 +5,7 @@
  - implemented import for apcal (goffy)
  - implemented import for extcal (goffy)
  - implemented group permissions (goffy)
+ - new maintenance for table registration (goffy)
 
 ==============================================================
 1.0.2 [2022/06/17]
